# replicache

./: .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  CONTRIBUTING.md  Cargo.toml  HACKING.md  LICENSE  QUICKSTART.md  README-replicache-client-archived.md  README.md  SERVER-SETUP.md  SERVER_SETUP.md  VERSION  babel.config.js  batch-response-schema.jsonc  batch-schema.jsonc  client-view-schema.jsonc  connection-loop.ts  contributing.md  design.md  faq.md  go.mod  go.sum  jest.config.js  jest.resolver.js  package-lock.json  package.json  perf-results.js  result.html  rollup.config.js  setup-flutter.md  test-unload.html  tsconfig.json  typedoc.json  wasm  web-test-runner.config.mjs  webpack4-setup.md
.github/workflows/: bundle-sizes.js.yml  codeql-analysis.yml  ec2.yml  js.yml  node.js.yml  perf-v2.js.yml  perf.js.yml  rust.yml
bundle-sizes/: data.js  index.html
crates/async-fn/: Cargo.toml
crates/bench/: Cargo.toml
crates/bench-macro/: Cargo.toml
crates/bench/src/: lib.rs
dev/bench/: data.js
doc/: .gitignore  README.md  design.md  docusaurus.config.js  faq.md  launch-checklist.md  package-lock.json  package.json  setup.md  sidebars.js  typedoc-sidebar.js
doc/docs/: design.md  faq.md  getting-started.md  guide-arch.md  guide-conclusion.md  guide-database-setup.md  guide-design-client-view.md  guide-dynamic-pull.md  guide-install-replicache.md  guide-intro.md  guide-local-mutations.md  guide-poke.md  guide-remote-mutations.md  guide-render-ui.md  how-it-works.md  launch-checklist.md  licensing.md  recipe-blobs.md  recipe-versioning.md  sample-chat.md  sample-replidraw.md  sample-todo.md  server-pull.md  server-push.md  setup.md
docs/: globals.html  index.html  modules.html
docs/classes/: _replicache_.replicache.html  _replicache_.replicachetest.html  default.html  replicache.html  repmhttpinvoker.html  repmwasminvoker.html  scanresult.html  transactionclosederror.html  writetransaction.html
docs/interfaces/: readtransaction.html  replicacheoptions.html  repminvoke.html  scanbound.html  scanid.html  scanitem.html  scankey.html  scanoptions.html  writetransaction.html
docs/modules/: _replicache_.html
licenses/: APL.txt  BSL.txt
perf/: .eslintrc.json  bundle-sizes.js  data.js  data.ts  format.ts  hash.ts  idb.js  idb.ts  index.html  index.ts  lock.ts  package-lock.json  perf.js  perf.ts  random.ts  replicache.js  replicache.ts  runner.js  runner.mjs  storage.ts  tsconfig.json
perf-v2/: .prettierignore  data.js  index.html
perf/data/: apple-i72x-2017-mac-chrome-89.0.4389.90.txt  apple-i72x-2017-mac-safari-14.0.3.txt  apple-m1-chromium-90.0.4430.0.txt  apple-m1-firefox-87.0.txt  apple-m1-safari-14.0.1.txt  ipad-chrome.txt  ipad-safari.txt  iphonex-chrome.txt
sample/cal/: .gitignore  README.md  build.js  package-lock.json  package.json
sample/lit-todo/: README.md  drag.js  index.html  main.js  package-lock.json  package.json  rollup.config.js  styles.css  sw.js
sample/next/: next.config.js  package.json
sample/perf/: index.html  package-lock.json  package.json  test.js
sample/redo/: .gitignore  .prettierrc  README.md  config-overrides.js  light.json  package-lock.json  package.json  tsconfig.json
src/: abort-error.ts  array-compare.test.ts  array-compare.ts  assert-not-null.ts  asserts.ts  async-iterable-iterator-to-array-wrapper.ts  async-iterable-to-array.ts  base32-encode.ts  chunk.rs  config.ts  connection-loop-delegates.ts  connection-loop.test.ts  connection-loop.ts  console.rs  database-info.ts  deep-readonly.ts  deps.ts  dev-global.test.ts  dispatch.rs  fetch-wrapper.ts  ffi.rs  generate.test.ts  get-headers.ts  get-size-of-value.test.ts  get-size-of-value.ts  has-own.ts  hash-json.ts  hash.rs  hash.test.ts  hash.ts  http-request-info.ts  http-request.ts  idb-store.ts  idbstore.rs  index.ts  json.test.ts  json.ts  lazy.ts  lib.rs  logger.ts  (+66 more)
src/benches/: dispatch.rs  hash.rs  idbstore.rs  mod.rs
src/btree/: changed-keys.ts  diff.ts  entry-type.ts  get-refs.ts  get-size-of-value.test.ts  get-size-of-value.ts  mod.rs  mod.ts  node-types.ts  node.rs  node.test.ts  node.ts  nodes.fbs  nodes_generated.rs  read.ts  splice.test.ts  splice.ts  write.ts
src/checksum/: mod.rs
src/dag/: chunk-type.ts  chunk.rs  chunk.test.ts  chunk.ts  config.ts  dag.ts  gc.test.ts  gc.ts  get-refs.ts  key.rs  key.test.ts  key.ts  kv_key.rs  lazy-store.test.ts  lazy-store.ts  meta.fbs  meta.ts  meta_generated.rs  meta_generated.ts  mod.rs  mod.ts  read-impl.test.ts  read-impl.ts  read.rs  read.test.ts  read.ts  store-impl.test.ts  store-impl.ts  store.rs  store.ts  test-store.ts  write-impl.test.ts  write-impl.ts  write.rs  write.test.ts  write.ts
src/db/: commit.fbs  commit.rs  commit.test.ts  commit.ts  commit_generated.rs  evaluate-json-pointer.ts  get-index-keys.ts  get-refs.ts  hash-ref-type.ts  hash-type.ts  index-key.ts  index-operation.ts  index-value.ts  index.rs  index.test.ts  index.ts  iter-util.test.ts  iter-util.ts  meta-typed.ts  mod.rs  mod.ts  read.rs  read.test.ts  read.ts  root.rs  root.test.ts  root.ts  scan.rs  scan.test.ts  scan.ts  starts-with.ts  test-helpers.ts  test_helpers.rs  transformer.test.ts  transformer.ts  util.ts  visitor.test.ts  visitor.ts  write.rs  write.test.ts  (+1 more)
src/embed/: connection.rs  connection.test.ts  connection.ts  dispatch.rs  http.rs  mod.rs  mod.ts  sync.rs  types.rs
src/fetch/: browser_client.rs  client.rs  errors.rs  mod.rs  rust_client.rs  timeout.rs  tokio_compat.rs
src/fixtures/: closeTransaction after rep.scan.json  closed tx.json  conflicting commits.json  get, has, scan on empty db.json  list and drop.json  name.json  put, get, has, del inside tx.json  reauth.json  register with error.json  scan escape.json  scan.json  subscribe close.json  subscribe with error.json  subscribe.json  sync.json  (+2 more)
tests/: ffi.go  idbstore.rs  sync_integration_test.go  types.go  wasm.rs
tool/: benchmark  build.mjs  build.sh  bump.sh  cli.ts  flatc.sh  get-deps.sh  get-license.ts  release.sh  sandbox.html  validate-binaries-for-publish.cjs  validate-binaries-for-publish.js
(+171 files in other folders)
