[package]
name = "replicache-client"
version = "0.1.0"
authors = ["Rocicorp <replicache@roci.dev>"]
edition = "2018"

[features]
default = ["console_error_panic_hook"]
benchmark = []

[dependencies]
async-std = { version = "=1.6.0", features = ["unstable"] }
async-trait = "0.1.36"
console_log = { version = "0.2" }
console_error_panic_hook = { version = "0.1.1", optional = true }
data-encoding = "1.1.1"
flatbuffers = "0.6.1"
futures = "0.3.5"
js-sys = "0.3.40"
lazy_static = "1.4.0"
log = "0.4"
nanoserde = "0.1"
sha2 = "0.8.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.13"
wee_alloc = "0.4.5"

[dev-dependencies]
async-std = { version = "=1.6.0", features = ["attributes", "unstable"] }
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
wasm-bench = { path = "crates/bench" }
wasm-bindgen-test = "0.3.0"

[dependencies.web-sys]
version = "0.3.40"
features = [
    "console",
    "DomException",
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbOpenDbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "Performance",
    "Window",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"  # Optimize for size.
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ["-Oz", "-g"]
