[package]
name = "wasm-bench"
version = "0.1.0"
authors = ["Rocicorp <replicache@roci.dev>"]
edition = "2018"

[dependencies]
async-fn = { path = "../async-fn" }
js-sys = "0.3.40"
log = "0.4"
thousands = "0.2.0"
wasm-bench-macro = { path = "../bench-macro" }
wasm-bindgen = "0.2"
web-sys = "0.3.42"

[lib]
test = false
